<resources>

    <!-- label , nazev pro aplikaci -->
    <string name="app_name">Anglická slovíčka</string>

    <!-- stringy pro navigation drawer menu -->
    <string name="sdiletAplikaci">Sdílet aplikaci</string>
    <string name="hodnotitAplikaci">Hodnotit aplikaci</string>
    <string name="poslatFeedback">Poslat připomínku</string>
    <string name="zobrazitInfo">Informace o aplikaci</string>
    <string name="nastaveni">Nastavení aplikace</string>

    <!-- string pro ActionBarDrawerToggle, nevím proč to potřebuje -->
    <string name="otevrit">Otevřít</string>
    <string name="zavrit">Zavřít</string>

    <!-- labely pro aktivity -->
    <string name="infoAktivitaLabel">Informace o aplikaci</string>
    <string name="settingsAktivitaLabel">Nastavení aplikace</string>


    <!-- text pro aktivitu info o aplikaci -->
    <string name="textInfo1">Pokud jste se dostali až sem, znamená to,
        že vás asi zajímá něco o této aplikaci.</string>
    <string name="textInfo2">Verze aplikace:</string>
    <string name="textInfo3">Aplikace obsahuje celkem</string>

    <!-- text pro aktivitu nastavení aplikace -->

    <string name="nastaveni_promichat_slovicka_label">Zamíchávat náhodně slovíčka</string>
    <string name="nastaveni_promichat_slovicka_klic" translatable="false">zamichavat_slovicka</string>
    <string name="nastaveni_promichat_slovicka_defaultni" translatable="false">true</string>
    <string name="nastaveni_promichat_slovicka_description">Při každém spuštění aplikace se slovíčka v každé kategorii promíchají</string>

    <string name="nastaveni_barva_aplikace_label">Barva aplikace</string>
    <string name="nastaveni_barva_aplikace_klic" translatable="false">barva_aplikace</string>
    <string name="nastaveni_barva_aplikace_defaultni" translatable="false">zelena</string>
    <string name="nastaveni_barva_aplikace_desctiption">Umožňuje změnit barvu aplikace, aplikace se po změně restartuje</string>





    <!-- stringy pro menu, nazvy kategorii, taby -->
    <string name="menu_item_1">Zvířata</string>
    <string name="menu_item_2">Rodina</string>
    <string name="menu_item_3">Jídlo a pití</string>
    <string name="menu_item_4">Osobnost a nálada</string>
    <string name="menu_item_5">Barvy</string>
    <string name="menu_item_6">Volný čas</string>
    <string name="menu_item_7">Sport</string>
    <string name="menu_item_8">Příroda a počasí</string>
    <string name="menu_item_9">Čísla</string>
    <string name="menu_item_10">Doprava</string>

</resources>
