<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mild_background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="cz.ejstn.learnlanguageapp.start.MainActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_1">
            <TextView
                android:id="@+id/menu_category_1"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_1" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_2">
            <TextView
                android:id="@+id/menu_category_2"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_2" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_3">
            <TextView
                android:id="@+id/menu_category_3"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_3" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_4">
            <TextView
                android:id="@+id/menu_category_4"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_4" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_5">
            <TextView
                android:id="@+id/menu_category_5"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_5" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_6">
            <TextView
                android:id="@+id/menu_category_6"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_6" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_7">
            <TextView
                android:id="@+id/menu_category_7"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_7" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_8">
            <TextView
                android:id="@+id/menu_category_8"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_8" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_1">
            <TextView
                android:id="@+id/menu_category_9"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_9" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/category_item_10">
            <TextView
                android:id="@+id/menu_category_10"
                style="@style/MenuCategoryStyle"
                android:text="@string/menu_item_10" />
        </FrameLayout>

    </LinearLayout>

</ScrollView>